<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.5">
  <DUT Name="FUSSION" Id="{d2c09cd2-8e70-4a80-befa-1773ffb3f2bc}">
    <Declaration><![CDATA[TYPE FUSSION :
STRUCT
	IPAddr		: STRING:= '127.0.0.1';
	IDSlave		: BYTE:= 255;
	TCPPort		: UINT:= 500;
	
	//--------------- LECTURA INPUT REGISTERS ---------------
	uiAddress_InputRegisters 		: ARRAY [1..19] OF UINT:= [1, 2, 3, 4, 5, 256, 257, 258, 259, 260, 261, 36864, 36865, 36866, 36867, 36868, 36869, 36870, 36871];
	uiRaw_InputRegisters 			: ARRAY [1..19] OF UINT;
	
	FSM_State_Outlet1	: UINT;
	Power_Outlet1		: UDINT;
	Energy_Outlet1		: UDINT;
	FSM_State_Outlet2	: UDINT;
	Power_Outlet2		: UDINT;
	Energy_Outlet2		: UDINT;
	Power_Phase1_Total	: UDINT;
	Power_Phase2_Total	: UDINT;
	Power_Phase3_Total	: UDINT;
	Number_Available_CPs: UDINT;
	
	//--------------- LECTURA HOLDING REGISTERS ---------------
	uiAddress_HoldingRegisters 		: ARRAY [1..18] OF WORD:= [32768,32769, 32770, 32771, 32772, 32773, 32774, 32775, 32776, 32777, 32784, 32785, 36864, 36865, 36866, 36867, 36868, 36869];
	
	uiRaw_HoldingRegisters			: ARRAY [1..18] OF UINT; // Variables leidas de Modbus para escritura en pyads
	Power_Phase1_Max_Outlet1		: UDINT;
	Power_Phase2_Max_Outlet1		: UDINT;
	Power_Phase3_Max_Outlet1		: UDINT;
	Power_Phase1_Max_Outlet2		: UDINT;
	Power_Phase2_Max_Outlet2		: UDINT;
	Power_Phase3_Max_Outlet2		: UDINT;
	Power_Phase1_Total_Max			: UDINT;
	Power_Phase2_Total_Max			: UDINT;
	Power_Phase3_Total_Max			: UDINT;
	
	uiRaw_HoldingRegisters_write	: ARRAY [1..18] OF UINT; // Variables recibidas para escritura en Modbus
		
	//Power_Phase1_Max_Outlet1_write	: UDINT;
	//Power_Phase2_Max_Outlet1_write	: UDINT;
	//Power_Phase3_Max_Outlet1_write	: UDINT;
	//Power_Phase1_Max_Outlet2_write	: UDINT;
	//Power_Phase2_Max_Outlet2_write	: UDINT;
	//Power_Phase3_Max_Outlet2_write	: UDINT;
	//Power_Phase1_Total_Max_write	: UDINT;
	//Power_Phase2_Total_Max_write	: UDINT;
	//Power_Phase3_Total_Max_write	: UDINT;
	
		
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>